Fix wrapping of text in compare pane

--- a/src/Less/index.less
+++ b/src/Less/index.less
@@ -226,6 +226,7 @@
   padding: 5px 0;
   text-align: justify;
   width: 98%;
+  white-space: normal;
 
   h4 {
     // -webkit-gradient(linear, 0 100%, 0 65%, from(rgba(255, 255, 255, 0)), to(rgba(255, 255, 255, 1)))
